testsuite/tests/linear/should_fail/LinearPolyType.stderr

LinearPolyType.hs:14:8: error:
    • Nontrivial multiplicity equalities are currently not supported
    • In the ambiguity check for ‘dep’
      To defer the ambiguity check to use sites, enable AllowAmbiguousTypes
      In the type signature:
        dep :: SBool b -> Int -->.(If b One Omega) Int
